<resources>
    <string name="app_name">SUF2</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username:</string>
    <string name="please">Please enter your username</string>
    <string name="submit">SUBMIT</string>
    <string name="password">Password:</string>
    <string name="please_type">Please enter your password</string>
    <string name="confirm">Confirm:</string>
    <string name="please_confirm">Please confirm your password</string>
</resources>
