<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:text="@string/username"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:hint="@string/please"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:text="@string/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:hint="@string/please_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="25"
                android:text="@string/confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_weight="75"
                android:hint="@string/please_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:text="@string/submit"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>
